# wgpu-webgl-wasm

./: ARCHITECTURE.md  Cargo.toml  README.md  package-lock.json  package.json  test.html  triangle.html  triangle_buffer.html  tsconfig.json  vite.config.ts
src/: lib.rs
src/ts/: logger.ts  triangle.ts  triangle_buffer.ts  types.ts  webgl-backend.ts  webgpu-backend.ts
src/webgl_backend/: bind_group.rs  buffer.rs  command.rs  device.rs  mod.rs  pipeline.rs  sampler.rs  shader.rs  texture.rs  types.rs
src/wgpu_backend/: bind_group.rs  buffer.rs  command.rs  device.rs  mod.rs  pipeline.rs  sampler.rs  shader.rs  stats.rs  texture.rs  types.rs
tests/: transpile.rs
