[package]
name = "wgpu-webgl-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bridge for wgpu with WebGL2 backend"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu-core = { version = "27.0.3", default-features = false, features = ["wgsl", "gles"] }
wgpu-hal = { version = "27.0.4", default-features = false, features = ["gles"] }
wgpu-types = { version = "27.0.1", default-features = false, features = ["web"] }
naga = { version = "27.0.3", default-features = false, features = ["wgsl-in", "glsl-out"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "OffscreenCanvas",
] }
js-sys = "0.3"
glow = "0.16"
log = "0.4"
console_log = "1"

[profile.release]
opt-level = "s"
lto = true
