[package]
name = "wgpu-webgl-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bridge providing WebGL2 fallback for WebGPU applications"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Shader transpilation (WGSL -> GLSL ES 300)
naga = { version = "27.0.3", default-features = false, features = ["wgsl-in", "glsl-out"] }

# WebGL2 bindings
glow = "0.16"

# WASM/JS interop
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "OffscreenCanvas",
] }
js-sys = "0.3"

# Logging
log = "0.4"
console_log = "1"

# Note: wgpu-core and wgpu-hal are NOT needed.
# We only use naga (which they also use internally) for shader transpilation,
# and glow for WebGL2 bindings. This keeps the WASM binary smaller.

[profile.release]
opt-level = "s"
lto = true
