[package]
name = "wgpu-webgl-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bridge providing WebGL2 fallback for WebGPU applications"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use wgpu with WebGL backend - this provides all the functionality we need
wgpu = { path = "../wgpu/wgpu", default-features = false, features = ["webgl", "wgsl"] }

# WASM/JS interop
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "OffscreenCanvas",
] }
js-sys = "0.3"

# Logging
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
